<resources>
    <string name="app_name">News App</string>
    <string name="title">Title:</string>
    <string name="source">Source:</string>
    <string name="description">Description:</string>
    <string name="theme">Theme</string>
    <string name="glide_image">Glide image</string>
    <string name="picasso_image">Picasso image</string>
    <string name="transition_to_article">transition_to_article</string>
    <string name="author">Author:</string>
    <string name="dash">-</string>
    <string name="published_at">Published At:</string>
</resources>
