<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="article"
            type="com.example.android.topic41.domain.util.Article" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.view.ArticleActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:transitionName="@string/transition_to_article">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/title" />

            <TextView
                android:id="@+id/title_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{article.title}"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/source" />

            <TextView
                android:id="@+id/source_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{article.source.name}"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/description" />

            <TextView
                android:id="@+id/description_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{article.description}"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/glide_image"/>

            <ImageView
                android:id="@+id/image_view_glide"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:layout_gravity="center"
                app:glide="@{article.urlToImage}"
                app:srcCompat="@drawable/place_holder" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/picasso_image"/>

            <ImageView
                android:id="@+id/image_view_picasso"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:layout_gravity="center"
                app:picasso="@{article.urlToImage}"
                app:srcCompat="@drawable/place_holder" />

        </LinearLayout>
    </ScrollView>
</layout>